[package]
name = "instagramPrinter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
dotenv = "0.15.0"
image = "0.24.7"
imageproc = "0.23.0"
reqwest = "0.11.22"
rusttype = "0.9.3"
serde_json = "1.0.108"
tokio = { version = "1.35.0", default-features = false, features = ["macros", "net", "rt-multi-thread"] }
